k8s/patches/ingress-patch.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thorium-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: "Host(`THORIUM.DOMAIN`)"
    kind: Rule
    services:
    - name: thorium-api
      port: 80
  - match: "Host(`REGISTRY.DOMAIN`)"
    kind: Rule
    services:
    - name: docker-registry
      port: 5000
    middlewares:
      - name: docker-registry-middleware
  tls:
    secretName: api-certs
